--- a/tugas/index.html
+++ b/tugas/index.html
@@ -39,7 +39,7 @@
                 <p>Kelas : IF-10</p>  
                 <a href="https://t.me/fawwaz41" target="_blank"><img src="css/tele.png" style="height: 50px;"></a>
                 <a href="https://www.instagram.com/aldirafawwaz_/" target="_blank"><img src="css/instagram.png" style="height: 50px;"></a>
-                <a href="https://l.instagram.com/?u=https%3A%2F%2Fopen.spotify.com%2Fuser%2F31i4ws5tr33mhkwufam3xzeazsdu%3Fsi%3DQO7-CYiCQ52oSdpMt72zSA%26utm_source%3Dcopy-link&e=AT2RWE6hRIxHR1o277UJvqcIOivxaf8UmtohISfIKNRzG6uzQDpRl2CREZBkDNP8JkhtSVQfLnBjHXd39nP91Ln3GeFyGusA-gtEhlxnvqEk2EgHWY3ujw" target="_blank"><img src="css/spotify.png" style="height: 50px;"></a>
+                <a href="https://open.spotify.com/user/31i4ws5tr33mhkwufam3xzeazsdu?si=b092a26f5f6146f7" target="_blank"><img src="css/spotify.png" style="height: 50px;"></a>
                 <br><br>
                 </div>  
                 </center>
