--- a/tugas/index.html
+++ b/tugas/index.html
@@ -23,7 +23,7 @@
                 <h2>Manchester City</h2>
                 <img src="css/citylogo3.png" style="height: 150px;">
                 <p>Manchester City adalah tim sepak bola profesional dari kota Manchester, Inggris yang berdiri sejak 16 April 1894.
-                Tim ini dijuluki The Citizens. Tim yang saat ini bermarkas di Etihad Stadium ini sudah memiliki banyak gelar, baik gelar domestik maupun internasional.
+                Tim ini dijuluki <i>The Citizens</i>. Tim yang saat ini bermarkas di Etihad Stadium ini sudah memiliki banyak gelar, baik gelar domestik maupun internasional.
                 Manchester City juga saat ini menjadi salah satu klub dengan <i>Market Value</i> tertinggi di dunia.</p>
                 <p>For more information click below here : </p>
                 <a href="https://www.mancity.com/" target="_blank"><img src="css/citylogo2.png" style="height: 50px;"></a>
